add past movies front end

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moviereferalsystem",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://SummerProject2020-21.github.io/MovieRecomendationSystem",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "gh-pages": "^3.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
@@ -26,6 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
